--- a/index.html
+++ b/index.html
@@ -18,45 +18,40 @@
         <h1>Prototype</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/nformux/prototype">View the Project on GitHub <small>nformux/prototype</small></a></p>
+        <p class="view"><a href="https://github.com/nformux/prototype-partials">View the Project on GitHub <small>nformux/prototype-partials</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/nformux/prototype/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nformux/prototype/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/nformux/prototype">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/nformux/prototype-partials/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/nformux/prototype-partials/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/nformux/prototype-partials">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h3>
-<a id="how-to-setup-a-new-prototype" class="anchor" href="#how-to-setup-a-new-prototype" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to setup a new prototype</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<ol>
-<li>Install <a href="https://nodejs.org/en/">Node</a>
-</li>
-<li>Open PowerShell (Windows) or Terminal (Mac)</li>
-<li>Install Harp
-<code>npm install -g harp</code>
-</li>
-<li>Initialize a new Harp project using the prototype core files
-<code>harp init my-project-name -b nformux/prototype-core</code>
-</li>
-<li>Navigate to your new project folder
-<code>cd my-project-name</code>
-</li>
-<li>Run Harp
-<code>harp server</code>
-</li>
-<li>Navigate to <a href="http://localhost:9000">http://localhost:9000</a> in your browser</li>
-</ol>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
-<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<ul>
-<li><a href="http://harpjs.com/docs/">Harp - Static Web Server</a></li>
-<li><a href="http://jade-lang.com/reference/">Jade - Templating Engine</a></li>
-</ul>
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nformux">nformux</a></p>
